trying to fix a problem of the display on mobile

--- a/src/app/bcard-content/bcard-content.component.css
+++ b/src/app/bcard-content/bcard-content.component.css
@@ -39,7 +39,6 @@ This is the bottom section of the Biz card
 
 .icons {
   width: 15%;
-  margin: auto;
   margin-right: 5%;
 }
 
